# sage

./: .gitignore  Cargo.toml  README.md  flake.nix
.gitea/workflows/: build.yml  linter.yml  trivy.yml
src/: main.rs
