[package]
name = "sage"
version = "0.1.0"
edition = "2024"
description = "An Encryption, Compression, and Error Correction tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command-line argument parsing
clap = { version = "4.5.45", features = ["derive"] }

# Encryption/Decryption
age = "0.11.1"

# Compression/Decompression
zstd = "0.13.3"
tar = "0.4.44"

# Error Correction
reed-solomon-erasure = "5.0.3"

# Error Handling
anyhow = "1.0.99"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
debug = false

