[package]
name = "sage"
version = "0.1.0"
edition = "2024"
description = "An Encryption, Compression, and Error Correction tool."

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
age = { version = "0.11.1", features = ["cli-common", "plugin"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }
tar = "0.4.44"
anyhow = "1.0.99"
log = "0.4.28"
env_logger = "0.11.8"
num_cpus = "1.17.0"
env = "1.0.1"
walkdir = "2.5.0"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
lto = true
debug = false
strip = "debuginfo"
